# Schedule_v2

./: .replit  addEvent.py  api.cjs  createDB.py  customevents.json  index.html  package-lock.json  package.json  pyproject.toml  server.cjs  updateJSON.py
src/: App-v1.jsx  App.css  App.jsx  DaySchedule.jsx  colors.json  customEvents.json  daily.json  dates-v2.json  dates.json
